# LocalFlow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
apps/desktop/: BUILD.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: agents.rs  chat.rs  mod.rs  openapi.rs  providers.rs  runs.rs  secrets.rs  security.rs  workflows.rs
apps/desktop/src/components/: ErrorBoundary.tsx  Layout.tsx
apps/desktop/src/hooks/: useApi.ts
apps/desktop/src/lib/: api.ts
apps/desktop/src/pages/: AgentEditorPage.tsx  AgentListPage.tsx  ApiManagementPage.tsx  ChatPage.tsx  RunLogsPage.tsx  SecuritySettingsPage.tsx  WorkflowEditorPage.tsx
apps/mobile/: BUILD_APK.md  pubspec.yaml
apps/mobile/android/: settings.gradle
apps/mobile/android/app/: build.gradle  proguard-rules.pro
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/kotlin/com/localflow/app/: MainActivity.kt
apps/mobile/lib/: app.dart  main.dart
apps/mobile/lib/models/: agent.dart  audit.dart  mod.dart  provider.dart  run.dart  workflow.dart
apps/mobile/lib/pages/: agent_editor_page.dart  agent_list_page.dart  api_management_page.dart  mod.dart  run_logs_page.dart  security_audit_page.dart  workflow_editor_page.dart
apps/mobile/lib/platform/: keystore.dart  mod.dart
apps/mobile/lib/providers/: agent_provider.dart  audit_provider.dart  mod.dart  provider_manager.dart  workflow_provider.dart
apps/mobile/lib/services/: api_service.dart  database_service.dart  mod.dart  secret_service.dart
apps/mobile/lib/widgets/: app_drawer.dart  empty_state.dart  error_banner.dart  loading_indicator.dart  mod.dart  run_status_badge.dart
apps/mobile/test/: models_test.dart
crates/api-tools/: Cargo.toml
crates/api-tools/src/: lib.rs  openapi.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  logging.rs  state_machine.rs  types.rs
crates/core/src/models/: agent.rs  audit.rs  mod.rs  provider.rs  secret.rs  workflow.rs
crates/model-providers/: Cargo.toml
crates/model-providers/src/: custom.rs  lib.rs  openai.rs  trait.rs  types.rs
crates/model-providers/tests/: integration.rs
crates/secret-vault/: Cargo.toml
crates/secret-vault/src/: encrypted_vault.rs  lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_initial_schema.sql  002_audit_logs.sql  003_indexes.sql
crates/storage/src/: agent_repo.rs  audit_repo.rs  lib.rs  migrations.rs  run_repo.rs  workflow_repo.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: dag.rs  engine.rs  executor.rs  lib.rs  types.rs
scripts/: setup-github.ps1
tests/: Cargo.toml  integration_test.rs
