[package]
name = "localflow-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audit logging for LocalFlow"

[dependencies]
localflow-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
