[package]
name = "localflow-model-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model provider implementations for LocalFlow - OpenAI compatible and Custom HTTP"

[dependencies]
localflow-core = { path = "../core" }
localflow-secret-vault = { path = "../secret-vault" }
localflow-security = { path = "../security" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
fastrand = "2"

[dev-dependencies]
wiremock = "0.6"