[package]
name = "localflow-secret-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secret storage and encryption for LocalFlow"

[dependencies]
localflow-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
