[package]
name = "localflow-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite storage layer for LocalFlow"

[dependencies]
localflow-core = { path = "../core" }
localflow-audit = { path = "../audit" }
rusqlite = { version = "0.34", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
