[package]
name = "localflow-desktop"
version = "0.1.0"
edition = "2021"
description = "LocalFlow Desktop - Local-first AI Agent and Workflow tool"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
localflow-core = { path = "../../../crates/core" }
localflow-storage = { path = "../../../crates/storage" }
localflow-secret-vault = { path = "../../../crates/secret-vault" }
localflow-security = { path = "../../../crates/security" }
localflow-audit = { path = "../../../crates/audit" }
localflow-api-tools = { path = "../../../crates/api-tools" }
localflow-workflow-engine = { path = "../../../crates/workflow-engine" }

[lib]
name = "localflow_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
